--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		</div>
 
 		<div class="hero-image">
-			<img src="images/Arun Bhandari Photo.jpeg">
+			<img src="images/aru.png">
 		</div>
 	</div>
 	<!--   === Hero Ends ===   -->
@@ -75,7 +75,7 @@
 	
 	<!--   === About Image Starts ===   -->
 	<div class="about-image">
-		<img src="images/Arun Bhandari Photo.jpeg">
+		<img src="images/aru.png">
 		<div class="social-media">
 			<i class="fa-brands fa-linkedin-in" onclick="window.open('https://www.linkedin.com/in/arun-b-', '_blank')"></i>
 			<i class="fa-brands fa-instagram"onclick="window.open('https://www.instagram.com/aaron__.009', '_blank')"></i>
