--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <p>I am a detail-oriented Data Analyst with a Bachelor's in Engineering (2024) and a passion for turning data into actionable insights. Proficient in Power BI, Tableau, SQL, and Python, I enjoy solving real-world problems through clear, impactful visualizations and predictive models.</li>
         I am eager to apply my analytical expertise in a forward-thinking organization and contribute to creating value through data-driven solutions.</p>
 
-		<button class="btn download-btn" onclick="window.open('https://drive.google.com/file/d/18ZnDdL4ecAuOr6poratRPMUXCC5sfWAI/view?usp=drive_link', '_blank')">Download CV</button>
+		<button class="btn download-btn" onclick="window.open('https://drive.google.com/file/d/1vB1y_lJ4RF-me9JYhby8_NvCdVcA4lGI/view?usp=sharing', '_blank')">Download CV</button>
 	</div>
 	<!--   === About Description Ends ===   -->
 
