--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <p>Data Analyst with a strong foundation in data processing, visualization, and reporting.
             Proficient in SQL, Python, Power BI, Tableau, and Excel, I specialize in cleaning, transforming, and analyzing data to generate meaningful insights. Passionate about leveraging statistical analysis and interactive dashboards, I aim to support business decision-making and turn raw data into actionable insights that drive value. Eager to apply my skills in a dynamic, forward-thinking organization.</p>
 
-		<button class="btn download-btn" onclick="window.open('https://drive.google.com/file/d/1vB1y_lJ4RF-me9JYhby8_NvCdVcA4lGI/view?usp=sharing', '_blank')">Download CV</button>
+		<button class="btn download-btn" onclick="window.open('https://drive.google.com/file/d/1JO_-Dx6I4xBGrjaqdyUHk1G8JYCOTLf_/view?usp=drive_link')">Download CV</button>
 	</div>
 	<!--   === About Description Ends ===   -->
 
